--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,6 @@ header {
 /* !navbar start */
 #navContent {
     text-align: center;
-    margin-top: 42px;
-    margin-bottom: -110px;
 }
 .collapse {
     flex-direction: column;
@@ -118,9 +116,23 @@ input::placeholder {
 /*! caption end*/
 
 /* !cultures__section  start*/
+.icon-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 103px;
+}
+.icon-box__picture {
+    display: inline-block;
+    min-height: 58px;
+}
 .cultures {
     max-width: 1565px;
     margin: 0 auto;
+}
+.cultures__item {
+    padding: 0;
 }
 .cultures__container {
     margin-top: 46px;
@@ -128,7 +140,8 @@ input::placeholder {
 }
 .container__items {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    margin-right: 10px;
 }
 .cultures__item:hover path {
     fill: #57984c;
@@ -138,7 +151,7 @@ input::placeholder {
 }
 
 .cultures__container h3 {
-    margin-top: 22px;
+    /* margin-top: 22px; */
     font-family: "Roboto Slab";
     font-style: normal;
     font-weight: 400;
@@ -269,12 +282,20 @@ h1 {
 #thumb-3 {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+.navbar-collapse {
+    margin-top: 10px;
+}
+.show,
+.collapsing {
+    margin-top: 100px;
+}
+
 /* !activities end */
 
 /* !media */
 @media (max-height: 1000px) and (max-width: 1200px) {
     .wrapper__caption {
-        margin-top: 100px;
+        margin-top: 200px;
     }
 }
 @media (max-height: 600px) {
@@ -283,6 +304,9 @@ h1 {
     }
 }
 @media (max-width: 1200px) {
+    .container__items {
+        justify-content: center;
+    }
     .container__card {
         flex-direction: column;
         padding-top: 20px;
@@ -311,7 +335,18 @@ h1 {
 @media (max-width: 992px) {
 }
 @media (max-width: 768px) {
+    .activities h1 {
+        font-size: 50px;
+    }
     #thumb-2 {
         margin-top: -73px;
+    }
+}
+@media (max-width: 500px) {
+    .card__text {
+        font-size: 30px;
+    }
+    .card__thumb {
+        width: 90%;
     }
 }
