--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ header {
     padding-bottom: 0px;
 }
 .navbar {
-    padding-top: 0px;
+    padding-top: 10px;
 }
 #navContent {
     text-align: center;
@@ -85,7 +85,7 @@ body._lock {
 /*! caption start*/
 .wrapper__caption {
     display: flex;
-    height: 100%;
+    height: 100vh;
     margin-top: 229px;
     /* max-height: 500px; */
 }
@@ -98,7 +98,6 @@ body._lock {
 }
 .caption__btn {
     margin-top: 60px;
-    margin-bottom: 100px;
 }
 .caption__text {
     font-family: "Roboto Slab";
