--- a/css/products.css
+++ b/css/products.css
@@ -220,7 +220,7 @@ section#content h1 {
     }
 }
 @media (max-width: 992px) {
-    .navbar-light .navbar-nav .nav-link {
+    /* .navbar-light .navbar-nav .nav-link {
         color: #fff;
     }
     .navbar-light .navbar-nav .nav-link:hover,
@@ -228,27 +228,20 @@ section#content h1 {
     .navbar-light .navbar-nav .nav-link:focus {
         color: #0a54f5;
         transition: 0.5s;
-    }
+    } */
     input::placeholder {
         opacity: 80%;
-        color: #fff;
+        /* color: #fff; */
     }
-    .header__search {
+    /* .header__search {
         background-image: url(../images/ico_search_white.svg);
         color: #fff;
         border-bottom: #fff 1px solid;
-    }
-    .header__search:hover {
+    } */
+    /* .header__search:hover {
         border-bottom: #0a54f5 1px solid;
         transition: 0.5s;
-    }
-    .navbar-collapse {
-        margin-top: 10px;
-    }
-    .show,
-    .collapsing {
-        margin-top: 100px;
-    }
+    } */
 }
 @media (max-width: 882px) {
     section#content h1 {
@@ -258,6 +251,12 @@ section#content h1 {
     }
     .block-1__union {
         text-align: center;
+    }
+    #background {
+        display: none;
+    }
+    #content {
+        margin-top: 150px;
     }
 }
 @media (max-width: 768px) {
