--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ h1 {
 @media (max-width: 992px) {
     .wrapper__caption {
         display: flex;
-        height: 100%;
+        height: 100vh;
         margin-top: 100px;
         /* max-height: 500px; */
     }
